array.island.Island.scala.error
Compilation error:
Island:10: error: '(' expected but identifier found.
    if b>a{
       ^Island:13: error: illegal start of simple expression
  }
  ^